--- a/contact.html
+++ b/contact.html
@@ -37,7 +37,7 @@
         <section class="inner-banner-sec contact">
             <div class="container text-center">
                 <h1 class="common-heading">LET’S WORK TOGETHER ON YOUR <br>NEXT PROJECT</h1>
-                <img src="./image/contact.png" class="mt-md-5 mt-4 w-100">
+                <img src="./image/contact.png" class="mt-md-3 mt-3 w-100">
             </div>
         </section>
 
@@ -47,7 +47,7 @@
                     <h4>LOCATION</h4>
                     <h3 class="text-white mw-100">IndiLogic LLC is headquartered in the USA <br>with a development center located in India.</h3>
                 </div>
-                <div class="row pt-lg-5 pt-4">
+                <div class="row pt-2">
                     <div class="col-lg-6 pe-md-5">
                         <div class="map text-white">
                             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d55000.46685227197!2d-97.78115376280059!3d30.506072322631525!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8644d1489e195555%3A0xd82180ea383a6e2!2sIndilogic%20Llc!5e0!3m2!1sen!2sin!4v1727773583523!5m2!1sen!2sin" width="100%" height="350" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
@@ -72,7 +72,7 @@
                     <h4>CONTACT DETAILS</h4>
                     <h3 class="mw-100">Feel free to reach out to us via email or phone, <br>and our team will promptly get back to you.</h3>
                 </div>
-                <div class="row pt-lg-5 pt-4">
+                <div class="row pt-2">
                     <div class="col-lg-4">
                         <a href="mailto:indilogic@gmail.com">
                             <span>
@@ -156,7 +156,7 @@
                                         <li><a href="home.html" class="text-decoration-none">Home</a></li>
                                         <li><a href="about.html" class="text-decoration-none">About us</a></li>
                                         <li><a href="service.html" class="text-decoration-none">Services</a></li>
-                                        <li><a href="product.html" class="text-decoration-none">products</a></li>
+                                        <li><a href="product.html" class="text-decoration-none">Products</a></li>
                                         <li><a href="contact.html" class="text-decoration-none">Contact us</a></li>
                                         <li><a href="#" class="text-decoration-none">Privacy Policy</a></li>
                                         <li><a href="Trademark.html" class="text-decoration-none">Trademark Disclaimer</a></li>
@@ -167,7 +167,7 @@
                                 <div class="f-address">
                                     <h5 class="f-title">Locations</h5>
                                     <p><b>USA:</b> IndiLogic LLC, Creek Bend Office Condominiums, 930 South Bell Blvd, Suite 302 Cedar Park, TX 78613, USA</p>
-                                    <p><b>INDIA:</b> IndiLogic Pvt. Ltd. , 8th Floor, Supertech Astralis , Business No. 3, Office No. 816  & 848 , Sector 94, Noida, Gautam Buddha Nagar, Uttar Pradesh India, Pin: 201301</p>
+                                    <p><b>INDIA:</b> IndiLogic Pvt. Ltd. , 8th Floor, Supertech Astralis , Business No. 3, Office No. 816  & 848 , Sector 94, Noida, Gautam Buddha Nagar, Uttar Pradesh, Pin: 201301, India</p>
                                 </div>
                                 <div class="social-icon d-md-none d-block">
                                     <a href="#"><img src="image/Facebook.png"></a>
