--- a/service.html
+++ b/service.html
@@ -132,7 +132,7 @@
         </section>
         <section class="our-service-sec">
             <div class="container">
-                <div class="common-title text-white pb-5">
+                <div class="common-title text-white">
                     <h4>OUR SERVICES</h4>
                    <h3 class="text-white mw-100">Applications Built by IndiLogic <br>
                     In Collaboration with Dell, Powering 16+ million Active Users</h3>
@@ -359,7 +359,7 @@
                         <p>Cloud Infrastructure</p>
                     </div>
                     <div class="logos">
-                        <img src="image/tech-10.jpg">
+                        <img src="image/tech-10.png">
                         <p>.Net</p>
                     </div>
                     <div class="logos">
@@ -482,7 +482,7 @@
                                         <li><a href="home.html" class="text-decoration-none">Home</a></li>
                                         <li><a href="about.html" class="text-decoration-none">About us</a></li>
                                         <li><a href="service.html" class="text-decoration-none">Services</a></li>
-                                        <li><a href="product.html" class="text-decoration-none">products</a></li>
+                                        <li><a href="product.html" class="text-decoration-none">Products</a></li>
                                         <li><a href="contact.html" class="text-decoration-none">Contact us</a></li>
                                         <li><a href="#" class="text-decoration-none">Privacy Policy</a></li>
                                         <li><a href="Trademark.html" class="text-decoration-none">Trademark Disclaimer</a></li>
@@ -493,7 +493,7 @@
                                 <div class="f-address">
                                     <h5 class="f-title">Locations</h5>
                                     <p><b>USA:</b> IndiLogic LLC, Creek Bend Office Condominiums, 930 South Bell Blvd, Suite 302 Cedar Park, TX 78613, USA</p>
-                                    <p><b>INDIA:</b> IndiLogic Pvt. Ltd. , 8th Floor, Supertech Astralis , Business No. 3, Office No. 816  & 848 , Sector 94, Noida, Gautam Buddha Nagar, Uttar Pradesh India, Pin: 201301</p>
+                                    <p><b>INDIA:</b> IndiLogic Pvt. Ltd. , 8th Floor, Supertech Astralis , Business No. 3, Office No. 816  & 848 , Sector 94, Noida, Gautam Buddha Nagar, Uttar Pradesh, Pin: 201301, India</p>
                                 </div>
                                 <div class="social-icon d-md-none d-block">
                                     <a href="#"><img src="image/Facebook.png"></a>
