--- a/Trademark.html
+++ b/Trademark.html
@@ -84,7 +84,7 @@
                                         <li><a href="home.html" class="text-decoration-none">Home</a></li>
                                         <li><a href="about.html" class="text-decoration-none">About us</a></li>
                                         <li><a href="service.html" class="text-decoration-none">Services</a></li>
-                                        <li><a href="product.html" class="text-decoration-none">products</a></li>
+                                        <li><a href="product.html" class="text-decoration-none">Products</a></li>
                                         <li><a href="contact.html" class="text-decoration-none">Contact us</a></li>
                                         <li><a href="#" class="text-decoration-none">Privacy Policy</a></li>
                                         <li><a href="Trademark.html" class="text-decoration-none">Trademark Disclaimer</a></li>
@@ -95,7 +95,7 @@
                                 <div class="f-address">
                                     <h5 class="f-title">Locations</h5>
                                     <p><b>USA:</b> IndiLogic LLC, Creek Bend Office Condominiums, 930 South Bell Blvd, Suite 302 Cedar Park, TX 78613, USA</p>
-                                    <p><b>INDIA:</b> IndiLogic Pvt. Ltd. , 8th Floor, Supertech Astralis , Business No. 3, Office No. 816  & 848 , Sector 94, Noida, Gautam Buddha Nagar, Uttar Pradesh, Pin: 201301</p>
+                                    <p><b>INDIA:</b> IndiLogic Pvt. Ltd. , 8th Floor, Supertech Astralis , Business No. 3, Office No. 816  & 848 , Sector 94, Noida, Gautam Buddha Nagar, Uttar Pradesh, Pin: 201301, India</p>
                                 </div>
                                 <div class="social-icon d-md-none d-block">
                                     <a href="#"><img src="image/Facebook.png"></a>
