--- a/home.html
+++ b/home.html
@@ -6,6 +6,7 @@
     <title>Indilogic</title>
     <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/inner-page.css">
 </head>
 <body>
     <header class="site-header" id="mainHeader">
@@ -48,12 +49,12 @@
                 <img src="image/banner-m.png" class="w-100 d-md-none d-block">
             </div> 
            <div class="position-absolute translate-middle  start-50">
-                <a href="contact.html" class="text-decoration-none text">Connect <svg class="ms-2" width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
-                    <path d="M7.83594 2.21191L13.124 7.49996L7.83594 12.788" stroke="#fff" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
-                    <path d="M13.1249 7.49988L1.875 7.49988" stroke="#fff" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
-                    </svg>
-                    
-                </a>
+            <a href="#" class="commom-btn mt-md-0 mt-3"><svg class="me-3 mb-1" width="19" height="21" viewBox="0 0 19 21" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path d="M2.30859 0.573712C1.6994 0.573712 1.20555 1.06756 1.20555 1.67676C1.20555 2.28595 1.6994 2.7798 2.30859 2.7798V0.573712ZM2.30859 2.7798H18.5699V0.573712H2.30859V2.7798Z" fill="#222222"/>
+                <path d="M16.5234 18.6773C16.5188 19.2987 17.0188 19.807 17.6402 19.8126C18.2615 19.8182 18.7689 19.319 18.7735 18.6977L16.5234 18.6773ZM18.7735 18.6977L18.8987 1.68719L16.6486 1.66683L16.5234 18.6773L18.7735 18.6977Z" fill="#222222"/>
+                <path d="M1.11353 18.3852C0.623945 18.9281 0.623945 19.8083 1.11353 20.3511C1.60311 20.894 2.39689 20.894 2.88647 20.3511L1.11353 18.3852ZM2.88647 20.3511L18.2273 3.3403L16.4544 1.37436L1.11353 18.3852L2.88647 20.3511Z" fill="#222222"/>
+                </svg>connect
+            </a>
            </div>
         </section>
         <section class="second-sec">
@@ -165,7 +166,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-lg-7 common-title">
-                        <h4>ABOUT US</h4>
+                        <h4>ABOUT US </h4>
                         <h3>At IndiLogic LLC (USA), we are committed to delivering high-quality products and services to our clients.</h3>
                     </div>
                 </div>
@@ -479,7 +480,7 @@
                                         <li><a href="home.html" class="text-decoration-none">Home</a></li>
                                         <li><a href="about.html" class="text-decoration-none">About us</a></li>
                                         <li><a href="service.html" class="text-decoration-none">Services</a></li>
-                                        <li><a href="product.html" class="text-decoration-none">products</a></li>
+                                        <li><a href="product.html" class="text-decoration-none">Products</a></li>
                                         <li><a href="contact.html" class="text-decoration-none">Contact us</a></li>
                                         <li><a href="#" class="text-decoration-none">Privacy Policy</a></li>
                                         <li><a href="Trademark.html" class="text-decoration-none">Trademark Disclaimer</a></li>
@@ -490,7 +491,7 @@
                                 <div class="f-address">
                                     <h5 class="f-title">Locations</h5>
                                     <p><b>USA:</b> IndiLogic LLC, Creek Bend Office Condominiums, 930 South Bell Blvd, Suite 302 Cedar Park, TX 78613, USA</p>
-                                    <p><b>INDIA:</b> IndiLogic Pvt. Ltd. , 8th Floor, Supertech Astralis , Business No. 3, Office No. 816  & 848 , Sector 94, Noida, Gautam Buddha Nagar, Uttar Pradesh India, Pin: 201301</p>
+                                    <p><b>INDIA:</b> IndiLogic Pvt. Ltd. , 8th Floor, Supertech Astralis , Business No. 3, Office No. 816  & 848 , Sector 94, Noida, Gautam Buddha Nagar, Uttar Pradesh, Pin: 201301, India</p>
                                 </div>
                                 <div class="social-icon d-md-none d-block">
                                     <a href="#"><img src="image/Facebook.png"></a>
