--- a/home.html
+++ b/home.html
@@ -260,7 +260,7 @@
                     <h4>OUR  SERVICES</h4>
                     <h3>We embrace creativity and innovation, pushing technology's boundaries to deliver cutting-edge solutions.                    </h3>
                 </div>
-                <div class="row service-sec">
+                <div class="row service-sec pt-5">
                     <div class="col-md-6 pe-lg-5">
                         <a href="http://13.53.42.103/indilogic/service.html#service1">
                             <div class="service" id="Development1">
