--- a/home.html
+++ b/home.html
@@ -167,7 +167,7 @@
                 <div class="row">
                     <div class="col-lg-7 common-title">
                         <h4>ABOUT US </h4>
-                        <h3>At IndiLogic LLC (USA), we are committed to delivering high-quality products and services to our clients.</h3>
+                        <h3>Empowering businesses to deliver exceptional customer experience through innovative technology solution.</h3>
                     </div>
                 </div>
                 <div class="row align-items-center pt-5 about-content">
