--- a/about.html
+++ b/about.html
@@ -50,7 +50,7 @@
             <div class="container">
                 <div class="common-title pb-3">
                     <h4>ABOUT US</h4>
-                    <h3>At IndiLogic LLC (USA), we are committed to delivering high-quality products and services to our clients. </h3>
+                    <h3>At IndiLogic LLC, Our Commitment is to Provide Superior Products and Services to Our Clients</h3>
                 </div>
 
                 <div class="row mt-5 align-items-center">
@@ -72,7 +72,9 @@
                     <div class="col-md-6">
                         <div class="about-text text-white">
                             <h4>Mehul Patel (CEO and CTO)</h4>
-                            <p>Bringing over 25 years of leadership experience in the tech industry. With a strong background in engineering, business development, and strategic planning, Mehul has successfully led IndiLogic for decades. His visionary leadership is dedicated to driving IndiLogic to new heights</p>
+                            <p>At IndiLogic, our mission is to empower businesses with innovative software solutions that push the boundaries of technology. Since our inception in 2012 in Texas, USA, we have specialized in custom, reliable, high-performance applications and systems that streamline operations and enhance functionality.
+                                Our expertise spans cross-platform application development, embedded systems, and firmware/IoT development. Over the years, we have transformed visionary ideas into groundbreaking advancements, ensuring precision, excellence, and customer satisfaction in every project.
+                                As a privately funded company, IndiLogic has experienced significant growth, generating multimillion-dollar revenues. Our unwavering commitment to innovation and quality positions us as a trusted partner in the dynamic tech landscape.</p>
                             <p class="pt-3">His leadership has been instrumental in developing IndiLogic's flagship products, ensuring they are robust, reliable, and future-ready. Outside of work, Mehul is an avid coder who enjoys mentoring young engineers. He firmly believes in the power of technology to change the world and is continually exploring new ways to innovate and inspire the next generation of tech leaders</p>
                         </div>
                     </div>
