--- a/service.html
+++ b/service.html
@@ -36,7 +36,7 @@
     <main>
         <section class="inner-banner-sec service">
             <div class="container text-center">
-                <h1 class="common-heading">We Follow Agile Scrum in our Organization and always thrive to improve the process gaps.</h1>
+                <h1 class="common-heading">We embrace Agile methodologies within our organization, consistently striving to enhance process efficiency and effectiveness.</h1>
                 <img src="./image/service.png" class="mt-md-3 mt-4 w-100">
             </div>
         </section>
@@ -134,8 +134,7 @@
             <div class="container">
                 <div class="common-title text-white">
                     <h4>OUR SERVICES</h4>
-                   <h3 class="text-white mw-100">Applications Built by IndiLogic <br>
-                    In Collaboration with Dell, Powering 16+ million Active Users</h3>
+                   <h3 class="text-white mw-100">ADelivering cutting-edge software solutions with precision and reliability – empowering your digital transformation journey</h3>
                 </div>
                 <div class="row pt-4 gy-4">
                     <div class="col-md-4 d-flex" id="service1">
