--- a/about.html
+++ b/about.html
@@ -37,7 +37,7 @@
         <section class="inner-banner-sec">
             <div class="container text-center">
                 <h1 class="common-heading">We’re a passion & inovation-driven company, crafting advanced software solutions.</h1>
-                <a href="#" class="commom-btn mt-3"><svg class="me-3 mb-1" width="19" height="21" viewBox="0 0 19 21" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <a href="mailto:connect@IndiLogic.com" class="commom-btn mt-3"><svg class="me-3 mb-1" width="19" height="21" viewBox="0 0 19 21" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <path d="M2.30859 0.573712C1.6994 0.573712 1.20555 1.06756 1.20555 1.67676C1.20555 2.28595 1.6994 2.7798 2.30859 2.7798V0.573712ZM2.30859 2.7798H18.5699V0.573712H2.30859V2.7798Z" fill="#222222"/>
                     <path d="M16.5234 18.6773C16.5188 19.2987 17.0188 19.807 17.6402 19.8126C18.2615 19.8182 18.7689 19.319 18.7735 18.6977L16.5234 18.6773ZM18.7735 18.6977L18.8987 1.68719L16.6486 1.66683L16.5234 18.6773L18.7735 18.6977Z" fill="#222222"/>
                     <path d="M1.11353 18.3852C0.623945 18.9281 0.623945 19.8083 1.11353 20.3511C1.60311 20.894 2.39689 20.894 2.88647 20.3511L1.11353 18.3852ZM2.88647 20.3511L18.2273 3.3403L16.4544 1.37436L1.11353 18.3852L2.88647 20.3511Z" fill="#222222"/>
@@ -59,7 +59,9 @@
                     </div>
                     <div class="col-md-6">
                         <div class="about-text">
-                            <p>Established in 2012 in Texas, USA, we have dedicated years to achieving excellence in Windows application development, embedded applications, and firmware development. As a privately funded and privately owned company, we have experienced exponential growth, generating multimillion-dollar revenues.</p>
+                            <p>At IndiLogic, our mission is to empower businesses with innovative software solutions that push the boundaries of technology. Since our inception in 2012 in Texas, USA, we have specialized in custom, reliable, high-performance applications and systems that streamline operations and enhance functionality.
+                                Our expertise spans cross-platform application development, embedded systems, and firmware/IoT development. Over the years, we have transformed visionary ideas into groundbreaking advancements, ensuring precision, excellence, and customer satisfaction in every project.
+                                As a privately funded company, IndiLogic has experienced significant growth, generating multimillion-dollar revenues. Our unwavering commitment to innovation and quality positions us as a trusted partner in the dynamic tech landscape.</p>
                         </div>
                     </div>
                 </div>
@@ -72,9 +74,7 @@
                     <div class="col-md-6">
                         <div class="about-text text-white">
                             <h4>Mehul Patel (CEO and CTO)</h4>
-                            <p>At IndiLogic, our mission is to empower businesses with innovative software solutions that push the boundaries of technology. Since our inception in 2012 in Texas, USA, we have specialized in custom, reliable, high-performance applications and systems that streamline operations and enhance functionality.
-                                Our expertise spans cross-platform application development, embedded systems, and firmware/IoT development. Over the years, we have transformed visionary ideas into groundbreaking advancements, ensuring precision, excellence, and customer satisfaction in every project.
-                                As a privately funded company, IndiLogic has experienced significant growth, generating multimillion-dollar revenues. Our unwavering commitment to innovation and quality positions us as a trusted partner in the dynamic tech landscape.</p>
+                            <p>Bringing over 25 years of leadership experience in the tech industry. With a strong background in engineering, business development, and strategic planning, Mehul has successfully led IndiLogic for decades. His visionary leadership is dedicated to driving IndiLogic to new heights</p>
                             <p class="pt-3">His leadership has been instrumental in developing IndiLogic's flagship products, ensuring they are robust, reliable, and future-ready. Outside of work, Mehul is an avid coder who enjoys mentoring young engineers. He firmly believes in the power of technology to change the world and is continually exploring new ways to innovate and inspire the next generation of tech leaders</p>
                         </div>
                     </div>
@@ -222,7 +222,7 @@
             <div class="container">
                 <div class="connect text-center mt-0">
                     <h2>How can we help you? Let's connect.</h2>
-                    <a href="#" class="text-decoration-none"><svg class="me-3" width="19" height="21" viewBox="0 0 19 21" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <a href="mailto:connect@IndiLogic.com" class="text-decoration-none"><svg class="me-3" width="19" height="21" viewBox="0 0 19 21" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <path d="M2.30664 0.131329C1.69745 0.131329 1.20359 0.625179 1.20359 1.23438C1.20359 1.84357 1.69745 2.33742 2.30664 2.33742V0.131329ZM2.30664 2.33742H18.5679V0.131329H2.30664V2.33742Z" fill="white"/>
                         <path d="M16.5234 18.2349C16.5188 18.8563 17.0188 19.3646 17.6402 19.3702C18.2615 19.3758 18.7689 18.8767 18.7735 18.2553L16.5234 18.2349ZM18.7735 18.2553L18.8987 1.24481L16.6486 1.22444L16.5234 18.2349L18.7735 18.2553Z" fill="white"/>
                         <path d="M1.11353 17.9428C0.623945 18.4857 0.623945 19.3659 1.11353 19.9088C1.60311 20.4516 2.39689 20.4516 2.88647 19.9088L1.11353 17.9428ZM2.88647 19.9088L18.2273 2.89792L16.4544 0.931977L1.11353 17.9428L2.88647 19.9088Z" fill="white"/>
