--- a/service.html
+++ b/service.html
@@ -134,7 +134,7 @@
             <div class="container">
                 <div class="common-title text-white">
                     <h4>OUR SERVICES</h4>
-                   <h3 class="text-white mw-100">ADelivering cutting-edge software solutions with precision and reliability – empowering your digital transformation journey</h3>
+                   <h3 class="text-white mw-100">A Delivering cutting-edge software solutions with precision and reliability – empowering your digital transformation journey</h3>
                 </div>
                 <div class="row pt-4 gy-4">
                     <div class="col-md-4 d-flex" id="service1">
@@ -433,7 +433,7 @@
             <div class="container">
                 <div class="connect text-center mt-0">
                     <h2>How can we help you? Let's connect.</h2>
-                    <a href="#" class="text-decoration-none"><svg class="me-3" width="19" height="21" viewBox="0 0 19 21" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <a href="mailto:connect@IndiLogic.com" class="text-decoration-none"><svg class="me-3" width="19" height="21" viewBox="0 0 19 21" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <path d="M2.30664 0.131329C1.69745 0.131329 1.20359 0.625179 1.20359 1.23438C1.20359 1.84357 1.69745 2.33742 2.30664 2.33742V0.131329ZM2.30664 2.33742H18.5679V0.131329H2.30664V2.33742Z" fill="white"/>
                         <path d="M16.5234 18.2349C16.5188 18.8563 17.0188 19.3646 17.6402 19.3702C18.2615 19.3758 18.7689 18.8767 18.7735 18.2553L16.5234 18.2349ZM18.7735 18.2553L18.8987 1.24481L16.6486 1.22444L16.5234 18.2349L18.7735 18.2553Z" fill="white"/>
                         <path d="M1.11353 17.9428C0.623945 18.4857 0.623945 19.3659 1.11353 19.9088C1.60311 20.4516 2.39689 20.4516 2.88647 19.9088L1.11353 17.9428ZM2.88647 19.9088L18.2273 2.89792L16.4544 0.931977L1.11353 17.9428L2.88647 19.9088Z" fill="white"/>
