--- a/contact.html
+++ b/contact.html
@@ -59,7 +59,7 @@
                         <div class="map text-white">
                             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3504.633456706573!2d77.32102762604356!3d28.550735137789484!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x390ce59002d23e03%3A0x57c2be62e51fcc2e!2sIndilogic!5e0!3m2!1sen!2sin!4v1727773414702!5m2!1sen!2sin" width="100%" height="350" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                             <h5 class="pt-3">Development Center (India)</h5>
-                            <p>IndiLogic Pvt. Ltd. , 8th Floor, Supertech Astril, Business No. 3, Office No. 816, Sector.94, Noida, Gautam Buddha Nagar, Uttar Pradesh India, Pin: 201301</p>
+                            <p>IndiLogic Pvt. Ltd. , 8th Floor, Supertech Astril, Business No. 3, Office No. 816, Sector.94, Noida, Gautam Buddha Nagar, Uttar Pradesh, Pin: 201301, India</p>
                         </div>
                     </div>
                 </div>
@@ -74,7 +74,7 @@
                 </div>
                 <div class="row pt-2">
                     <div class="col-lg-4">
-                        <a href="mailto:indilogic@gmail.com">
+                        <a href="mailto:connect@IndiLogic.com">
                             <span>
                                 <svg width="34" height="33" viewBox="0 0 34 33" fill="none" xmlns="http://www.w3.org/2000/svg">
                                     <path d="M27.0664 5.50073H7.81641C6.72239 5.50073 5.67318 5.93533 4.89959 6.70892C4.126 7.4825 3.69141 8.53171 3.69141 9.62573V23.3757C3.69141 24.4697 4.126 25.519 4.89959 26.2925C5.67318 27.0661 6.72239 27.5007 7.81641 27.5007H27.0664C28.1604 27.5007 29.2096 27.0661 29.9832 26.2925C30.7568 25.519 31.1914 24.4697 31.1914 23.3757V9.62573C31.1914 8.53171 30.7568 7.4825 29.9832 6.70892C29.2096 5.93533 28.1604 5.50073 27.0664 5.50073ZM7.81641 8.25073H27.0664C27.4311 8.25073 27.7808 8.3956 28.0387 8.65346C28.2965 8.91132 28.4414 9.26106 28.4414 9.62573L17.4414 16.3357L6.44141 9.62573C6.44141 9.26106 6.58627 8.91132 6.84414 8.65346C7.102 8.3956 7.45173 8.25073 7.81641 8.25073ZM28.4414 23.3757C28.4414 23.7404 28.2965 24.0901 28.0387 24.348C27.7808 24.6059 27.4311 24.7507 27.0664 24.7507H7.81641C7.45173 24.7507 7.102 24.6059 6.84414 24.348C6.58627 24.0901 6.44141 23.7404 6.44141 23.3757V12.7607L16.7264 19.0445C16.9354 19.1652 17.1725 19.2287 17.4139 19.2287C17.6553 19.2287 17.8924 19.1652 18.1014 19.0445L28.4414 12.7607V23.3757Z" fill="black"/>
@@ -108,7 +108,7 @@
             <div class="container">
                 <div class="connect text-center mt-0">
                     <h2>How can we help you? Let's connect.</h2>
-                    <a href="#" class="text-decoration-none"><svg class="me-3" width="19" height="21" viewBox="0 0 19 21" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <a href="mailto:connect@IndiLogic.com" class="text-decoration-none"><svg class="me-3" width="19" height="21" viewBox="0 0 19 21" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <path d="M2.30664 0.131329C1.69745 0.131329 1.20359 0.625179 1.20359 1.23438C1.20359 1.84357 1.69745 2.33742 2.30664 2.33742V0.131329ZM2.30664 2.33742H18.5679V0.131329H2.30664V2.33742Z" fill="white"/>
                         <path d="M16.5234 18.2349C16.5188 18.8563 17.0188 19.3646 17.6402 19.3702C18.2615 19.3758 18.7689 18.8767 18.7735 18.2553L16.5234 18.2349ZM18.7735 18.2553L18.8987 1.24481L16.6486 1.22444L16.5234 18.2349L18.7735 18.2553Z" fill="white"/>
                         <path d="M1.11353 17.9428C0.623945 18.4857 0.623945 19.3659 1.11353 19.9088C1.60311 20.4516 2.39689 20.4516 2.88647 19.9088L1.11353 17.9428ZM2.88647 19.9088L18.2273 2.89792L16.4544 0.931977L1.11353 17.9428L2.88647 19.9088Z" fill="white"/>
