--- a/about.html
+++ b/about.html
@@ -59,9 +59,9 @@
                     </div>
                     <div class="col-md-6">
                         <div class="about-text">
-                            <p>At IndiLogic, our mission is to empower businesses with innovative software solutions that push the boundaries of technology. Since our inception in 2012 in Texas, USA, we have specialized in custom, reliable, high-performance applications and systems that streamline operations and enhance functionality.
-                                Our expertise spans cross-platform application development, embedded systems, and firmware/IoT development. Over the years, we have transformed visionary ideas into groundbreaking advancements, ensuring precision, excellence, and customer satisfaction in every project.
-                                As a privately funded company, IndiLogic has experienced significant growth, generating multimillion-dollar revenues. Our unwavering commitment to innovation and quality positions us as a trusted partner in the dynamic tech landscape.</p>
+                            <p>At IndiLogic, our mission is to empower businesses with innovative software solutions that push the boundaries of technology. Since our inception in 2012 in Texas, USA, we have specialized in custom, reliable, high-performance applications and systems that streamline operations and enhance functionality.</p>
+                            <p class="pt-1">Our expertise spans cross-platform application development, embedded systems, and firmware/IoT development. Over the years, we have transformed visionary ideas into groundbreaking advancements, ensuring precision, excellence, and customer satisfaction in every project.</p>
+                            <p class="pt-1">As a privately funded company, IndiLogic has experienced significant growth, generating multimillion-dollar revenues. Our unwavering commitment to innovation and quality positions us as a trusted partner in the dynamic tech landscape.</p>
                         </div>
                     </div>
                 </div>
@@ -74,8 +74,9 @@
                     <div class="col-md-6">
                         <div class="about-text text-white">
                             <h4>Mehul Patel (CEO and CTO)</h4>
-                            <p>Bringing over 25 years of leadership experience in the tech industry. With a strong background in engineering, business development, and strategic planning, Mehul has successfully led IndiLogic for decades. His visionary leadership is dedicated to driving IndiLogic to new heights</p>
-                            <p class="pt-3">His leadership has been instrumental in developing IndiLogic's flagship products, ensuring they are robust, reliable, and future-ready. Outside of work, Mehul is an avid coder who enjoys mentoring young engineers. He firmly believes in the power of technology to change the world and is continually exploring new ways to innovate and inspire the next generation of tech leaders</p>
+                            <p>Mehul Patel is the Chief Executive Officer and Chief Technology Officer at IndiLogic, bringing over 25 years of leadership experience in the tech industry. With a strong background in engineering, business development, and strategic planning, Mehul has successfully led IndiLogic for decades. His visionary leadership is dedicated to driving IndiLogic to new heights by fostering a culture of excellence and customer-centric innovation.</p>
+                            <p class="pt-1">Mehul's expertise lies in developing scalable software and systems that meet the evolving needs of the market. Beyond business, he is passionate about leveraging technology to create cutting-edge engineering solutions that not only meet but exceed customer expectations. Under his guidance, IndiLogic has expanded its footprint from Austin, Texas, to establish a new development center in Noida, India.</p>
+                            <p class="pt-1">His leadership has been instrumental in developing IndiLogic's flagship products, ensuring they are robust, reliable, and future-ready. Outside of work, Mehul is an avid coder who enjoys mentoring young engineers. He firmly believes in the power of technology to change the world and is continually exploring new ways to innovate and inspire the next generation of tech leaders.</p>
                         </div>
                     </div>
                     <div class="col-md-6">
