--- a/product.html
+++ b/product.html
@@ -53,7 +53,7 @@
            <div class="container text-white">
                 <h3>Partnership WITH DELL</h3>
                 <h4>Transforming Ideas into Products with Dell Technologies</h4>
-                <p><b>At Indilogic LLC,</b> we take pride in delivering top quality products and services that exceed industry standards. Our collabrations with <b>DELL Technologies</b> as trusted strategic partner has resulted in products that are used by over <b>16+ million users worldwide.</b></p>
+                <p>At Indilogic LLC, we take pride in delivering top quality products and services that exceed industry standards. Our collabrations with DELL Technologies as trusted strategic partner has resulted in products that are used by over 16+ million users worldwide</p>
            </div>
         </section>
 
