--- a/service.html
+++ b/service.html
@@ -29,6 +29,9 @@
             </ul>
           </nav>
           <button class="menu-toggle" aria-label="Open Menu">
+            <svg width="23" height="13" viewBox="0 0 23 13" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path d="M0.5 1H22.5M0.5 12H22.5M0.5 6.5H22.5" stroke="black"/>
+            </svg>  
           </button>
         </div>
     </header> 
@@ -80,7 +83,7 @@
                                 </div>
                                 <div class="service-box-flip text-white">
                                     <h4>Customized solutions</h4>
-                                    <p>Tailoring cutting-edge solutions to meet your unique business needs and goals.</p>
+                                    <p>Our team had the privilege of collaborating closely with the Miami-based Alienware team to develop the corearchitecture for the Alienware Command .</p>
                                 </div>
                             </div>
                         </div>
@@ -384,42 +387,42 @@
             <div class="container">
                 <h3>Our Development Process</h4>
                 <div class="row pt-5">
-                    <div class="col-lg-4 col-md-6 d-flex">
+                    <div class="col-lg-4 col-6 d-flex">
                         <div class="development text-center">
                             <img src="image/d-1.png">
                             <h4>1. Initial Consultation</h4>
                             <p>Defining your vision</p>
                         </div>
                     </div>
-                    <div class="col-lg-4 col-md-6 d-flex">
+                    <div class="col-lg-4 col-6 d-flex">
                         <div class="development text-center">
                             <img src="image/d-2.png">
                             <h4>2. Backlog Creation</h4>
                             <p>Prioritizing with the MVP first</p>
                         </div>
                     </div>
-                    <div class="col-lg-4 col-md-6 d-flex">
+                    <div class="col-lg-4 col-6 d-flex">
                         <div class="development text-center">
                             <img src="image/d-3.png">
                             <h4>3. Design Phase</h4>
                             <p>Structuring the solution with scalable architecture</p>
                         </div>
                     </div>
-                    <div class="col-lg-4 col-md-6 d-flex">
+                    <div class="col-lg-4 col-6 d-flex">
                         <div class="development text-center">
                             <img src="image/d-4.png">
                             <h4>4. Development</h4>
                             <p>Iterative and adaptive using agile methodologies</p>
                         </div>
                     </div>
-                    <div class="col-lg-4 col-md-6 d-flex">
+                    <div class="col-lg-4 col-6 d-flex">
                         <div class="development text-center">
                             <img src="image/d-5.png">
                             <h4>5. Testing</h4>
                             <p>Ensuring Quality at every stage through rigorous UAT</p>
                         </div>
                     </div>
-                    <div class="col-lg-4 col-md-6 d-flex">
+                    <div class="col-lg-4 col-6 d-flex">
                         <div class="development text-center">
                             <img src="image/d-6.png">
                             <h4>6. Release & Ongoing support</h4>
