--- a/about.html
+++ b/about.html
@@ -53,7 +53,7 @@
                     <h3>At IndiLogic LLC, Our Commitment is to Provide Superior Products and Services to Our Clients</h3>
                 </div>
 
-                <div class="row mt-5 align-items-center">
+                <div class="row mt-md-5 mt-3 align-items-center">
                     <div class="col-md-6">
                         <img src="./image/a-2.png" class="w-100">
                     </div>
