--- a/home.html
+++ b/home.html
@@ -203,16 +203,20 @@
         <section class="dell">
             <div class="container">
                 <div class="row align-items-center">
-                    <div class="col-2">
+                    <div class="col-md-2 col-3">
                         <img src="image/dell.png">
                     </div>
                     <div class="col-1">
                         <div class="middle-boder"></div>
                     </div>
-                    <div class="col-9">
+                    <div class="col-8 d-md-none dell-text text-white">
+                        <h1 class="">Proud Strategic Partners of Dell Technologies</h1>
+                    </div>
+                    
+                    <div class="col-md-9 col-12">
                         <div class="dell-text text-white">
-                            <h1>Proud Strategic Partners of Dell Technologies</h1>
-                            <p>At IndiLogic, we’re honored to be a strategic partner of Dell, a global leader in technology innovation. This collaboration empowers us to deliver cutting-edge solutions that drive digital transformation and success for our clients. Together, we’re shaping the future of technology.</p>
+                            <h1 class="d-none d-md-block">Proud Strategic Partners of Dell Technologies</h1>
+                            <p class="pt-md-0 pt-3">At IndiLogic, we’re honored to be a strategic partner of Dell, a global leader in technology innovation. This collaboration empowers us to deliver cutting-edge solutions that drive digital transformation and success for our clients. Together, we’re shaping the future of technology.</p>
                         </div>
                     </div>
                 </div>
