--- a/service.html
+++ b/service.html
@@ -149,28 +149,28 @@
                                     <path d="M1.11353 18.7084C0.623945 19.2513 0.623945 20.1315 1.11353 20.6744C1.60311 21.2173 2.39689 21.2173 2.88647 20.6744L1.11353 18.7084ZM2.88647 20.6744L18.2273 3.66355L16.4544 1.6976L1.11353 18.7084L2.88647 20.6744Z" fill="#1E1E1E"/>
                                 </svg>  
                             </div>
-                            <h4>Device Drivers Development</h4>
+                            <h4>Device Driver Development</h4>
                             <p>Our expertise in device driver development ensures seamless interaction between hardware and software components.</p>
                         </div>
                         <div class="popup-overlay" id="popup-1">
                             <div class="popup-content container">
                                 <span class="close-btn">&times;</span>
-                                <h4>Device Drivers Development</h4>
-                                <p>Our expertise in device driver development ensures seamless interaction between hardware and software components. We create reliable, efficient, and optimized drivers that enhance device functionality 
+                                <h4>Device Driver Development</h4>
+                                <p>Our expertise in device driver development ensures seamless interaction between hardware and software components. We create reliable, efficient, and optimized driver that enhance device functionality 
                                     and performance, providing a smooth and stable user experience</p>
                             
                                 <div class="row gy-4">
                                     <div class="col-md-6 d-flex">
                                         <div class="inner-content">
                                             <h5>Audio and Multimedia Driver Development</h5>
-                                            <p>We specialize in premier audio and multimedia driver development, with a proven track record in creating WDM audio drivers and providing robust nterface support. Our expertise extends across advanced Windows sound architecture, delivering exceptional device support for Windows environments. </p>
+                                            <p>We specialize in premier audio and multimedia driver development, with a proven track record in creating WDM audio driver and providing robust nterface support. Our expertise extends across advanced Windows sound architecture, delivering exceptional device support for Windows environments. </p>
                                             <p>Additionally, we excel in developing tailored audio solutions for PCs, embedded platforms, and wearable devices. Embrace innovation and tackle new challenges with our cutting-edge driver solutions.</p>
                                         </div>
                                     </div>
                                     <div class="col-md-6 d-flex">
                                         <div class="inner-content">
                                             <h5>USB Device Driver Development</h5>
-                                            <p>We specialize in advanced USB device driver development for a diverse range of platforms, including Windows XP through 10, Linux, Android, iOS, and macOS. Our expert engineers excel in kernel-mode driver development, leveraging in-depth OS knowledge to create and debug custom drivers effectively.</p>
+                                            <p>We specialize in advanced USB device driver development for a diverse range of platforms, including Windows XP through 10, Linux, Android, iOS, and macOS. Our expert engineers excel in kernel-mode driver development, leveraging in-depth OS knowledge to create and debug custom driver effectively.</p>
                                             <p> We adhere to stringent coding standards and quality assurance practices, ensuring optimal performance and eliminating bottlenecks. From development to deployment, we deliver innovative and authentic solutions that drive device functionality and reliability</p>
                                         </div>
                                     </div>
