--- a/home.html
+++ b/home.html
@@ -49,11 +49,11 @@
                 <img src="image/banner-m.png" class="w-100 d-md-none d-block">
             </div> 
            <div class="position-absolute translate-middle  start-50">
-            <a href="mailto:connect@IndiLogic.com" class="commom-btn mt-md-0 mt-3"><svg class="me-3 mb-1" width="19" height="21" viewBox="0 0 19 21" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <a href="mailto:connect@IndiLogic.com" class="commom-btn bg mt-md-0 mt-3"><svg class="me-3 mb-1" width="19" height="21" viewBox="0 0 19 21" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <path d="M2.30859 0.573712C1.6994 0.573712 1.20555 1.06756 1.20555 1.67676C1.20555 2.28595 1.6994 2.7798 2.30859 2.7798V0.573712ZM2.30859 2.7798H18.5699V0.573712H2.30859V2.7798Z" fill="#222222"/>
                 <path d="M16.5234 18.6773C16.5188 19.2987 17.0188 19.807 17.6402 19.8126C18.2615 19.8182 18.7689 19.319 18.7735 18.6977L16.5234 18.6773ZM18.7735 18.6977L18.8987 1.68719L16.6486 1.66683L16.5234 18.6773L18.7735 18.6977Z" fill="#222222"/>
                 <path d="M1.11353 18.3852C0.623945 18.9281 0.623945 19.8083 1.11353 20.3511C1.60311 20.894 2.39689 20.894 2.88647 20.3511L1.11353 18.3852ZM2.88647 20.3511L18.2273 3.3403L16.4544 1.37436L1.11353 18.3852L2.88647 20.3511Z" fill="#222222"/>
-                </svg>connect
+                </svg>Connect
             </a>
            </div>
         </section>
@@ -356,7 +356,7 @@
                         <rect width="1214" height="1214" fill="white"/>
                         </clipPath>
                         </defs>
-                        </svg></span>Technology</p>
+                        </svg></span>Information Technology</p>
                     <p><span class="pe-3">
                         <svg width="50" height="50" viewBox="0 0 1214 1214" fill="none" xmlns="http://www.w3.org/2000/svg">
                             <path d="M815.656 341.438H398.344C383.257 341.455 368.793 347.456 358.124 358.124C347.456 368.793 341.455 383.257 341.438 398.344V815.656C341.455 830.743 347.456 845.207 358.124 855.876C368.793 866.544 383.257 872.545 398.344 872.562H815.656C830.743 872.545 845.207 866.544 855.876 855.876C866.544 845.207 872.545 830.743 872.562 815.656V398.344C872.545 383.257 866.544 368.793 855.876 358.124C845.207 347.456 830.743 341.455 815.656 341.438ZM834.625 815.656C834.619 820.685 832.619 825.507 829.063 829.063C825.507 832.619 820.685 834.619 815.656 834.625H398.344C393.315 834.619 388.493 832.619 384.937 829.063C381.381 825.507 379.381 820.685 379.375 815.656V398.344C379.381 393.315 381.381 388.493 384.937 384.937C388.493 381.381 393.315 379.381 398.344 379.375H815.656C820.685 379.381 825.507 381.381 829.063 384.937C832.619 388.493 834.619 393.315 834.625 398.344V815.656Z" fill="white"/>
