--- a/product.html
+++ b/product.html
@@ -38,11 +38,11 @@
             <div class="container text-md-start text-center">
                 <div class="d-md-flex align-items-center justify-content-between">
                     <h1 class="common-heading m-0">Unlock the Power <br> Of your Vision with our Logic</h1>
-                    <a href="mailto:connect@IndiLogic.com" class="commom-btn mt-md-0 mt-3"><svg class="me-3 mb-1" width="19" height="21" viewBox="0 0 19 21" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <a href="mailto:connect@IndiLogic.com" class="commom-btn bg mt-md-0 mt-3"><svg class="me-3 mb-1" width="19" height="21" viewBox="0 0 19 21" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <path d="M2.30859 0.573712C1.6994 0.573712 1.20555 1.06756 1.20555 1.67676C1.20555 2.28595 1.6994 2.7798 2.30859 2.7798V0.573712ZM2.30859 2.7798H18.5699V0.573712H2.30859V2.7798Z" fill="#222222"/>
                         <path d="M16.5234 18.6773C16.5188 19.2987 17.0188 19.807 17.6402 19.8126C18.2615 19.8182 18.7689 19.319 18.7735 18.6977L16.5234 18.6773ZM18.7735 18.6977L18.8987 1.68719L16.6486 1.66683L16.5234 18.6773L18.7735 18.6977Z" fill="#222222"/>
                         <path d="M1.11353 18.3852C0.623945 18.9281 0.623945 19.8083 1.11353 20.3511C1.60311 20.894 2.39689 20.894 2.88647 20.3511L1.11353 18.3852ZM2.88647 20.3511L18.2273 3.3403L16.4544 1.37436L1.11353 18.3852L2.88647 20.3511Z" fill="#222222"/>
-                        </svg>connect
+                        </svg>Connect
                     </a>
                 </div>
                 <img src="./image/product.png" class="mt-md-3 mt-4 w-100">
