--- a/Trademark.html
+++ b/Trademark.html
@@ -86,7 +86,7 @@
                                         <li><a href="service.html" class="text-decoration-none">Services</a></li>
                                         <li><a href="product.html" class="text-decoration-none">Products</a></li>
                                         <li><a href="contact.html" class="text-decoration-none">Contact us</a></li>
-                                        <li><a href="#" class="text-decoration-none">Privacy Policy</a></li>
+                                        <!-- <li><a href="#" class="text-decoration-none">Privacy Policy</a></li> -->
                                         <li><a href="Trademark.html" class="text-decoration-none">Trademark Disclaimer</a></li>
                                     </ul>
                                 </div>
