--- a/product.html
+++ b/product.html
@@ -53,7 +53,7 @@
            <div class="container text-white">
                 <h3>Partnership WITH DELL</h3>
                 <h4>Transforming Ideas into Products with Dell Technologies</h4>
-                <p>At Indilogic LLC, we take pride in delivering top quality products and services that exceed industry standards. Our collabrations with DELL Technologies as trusted strategic partner has resulted in products that are used by over 16+ million users worldwide</p>
+                <p>At IndiLogic LLC, we take pride in delivering top quality products and services that exceed industry standards. Our collabrations with Dell Technologies as trusted strategic partner has resulted in products that are used by over 16+ million users worldwide</p>
            </div>
         </section>
 
@@ -122,7 +122,7 @@
                                 <li><span>Global impact:</span> Distributed to numerous Dell vendors worldwide.</li>
                                 <li><span>Large-scale distribution:</span> Expected to reach around 30 million units annually.</li>
                                 <li><span>Focus on data protection:</span> A crucial upgrade to safeguard user data and improve device efficiency.</li>  
-                                <li><span>Innovation-driven:</span> Team’s passion is fueled by protecting and empowering millions of users globally.</li>  
+                                <li><span>Innovation-driven:</span> Provided seamless plug-and-play functionality, enabling the pairing of multiple compatible devices with a single dongle</li>  
                             </ul>
                         </div>
                     </div>
@@ -222,7 +222,7 @@
                                         <li><a href="service.html" class="text-decoration-none">Services</a></li>
                                         <li><a href="product.html" class="text-decoration-none">Products</a></li>
                                         <li><a href="contact.html" class="text-decoration-none">Contact us</a></li>
-                                        <li><a href="#" class="text-decoration-none">Privacy Policy</a></li>
+                                        <!-- <li><a href="#" class="text-decoration-none">Privacy Policy</a></li> -->
                                         <li><a href="Trademark.html" class="text-decoration-none">Trademark Disclaimer</a></li>
                                     </ul>
                                 </div>
